# HHEMS

./: README.md
configs/: basic.py
demkit/: .gitignore  Dockerfile  docker-compose.demkit.yml  docker-compose.services.yml
demkit/demkit/: demkit.py  requirements.txt
demkit/demkit/conf/: usrconf.docker.py  usrconf.example.py
demkit/demkit/docker/: WithComponents  WithoutComponents
demkit/demkit/tools/: bus.py
demkit/workspace/example/: demohouse.py
docs/: index.css  index.html  package-lock.json  package.json
ha/: .gitignore  docker-compose.yml
hems-core/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
hems-core/api-docs/: api-doc.json
hems-core/src/: api.rs  main.rs
hems-core/src/api/: demkit.rs  docs.rs  ha.rs
hems-core/src/api/demkit/: battery.rs  devices.rs  env.rs  ha_entity.rs  meter.rs  sim.rs  solar.rs  thermal.rs  timeshifters.rs
hems-core/src/api/ha/: entity.rs
hems-core/src/resources/: house.rs
hems-core/src/resources/devices/: battery.rs  devices.rs  ha_entity.rs  meter.rs  solar.rs  thermal.rs  timeshifters.rs
hems_application/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  firebase.json  pubspec.yaml
hems_application/android/app/: build.gradle.kts  google-services.json
hems_application/ios/Runner.xcodeproj/: project.pbxproj
hems_application/lib/: app_navigation.dart  extensions.dart  main.dart
hems_application/lib/l10n/: app_en.arb  (+1 more)
hems_application/linux/: CMakeLists.txt
hems_application/test/: app_navigation_test.dart
hems_application/web/: app.html  index.html  manifest.json
(+264 files in other folders)
